refactoring: UserName type
