# argentum_user_account/rest/api-spec/openapi.yaml
@@ -293,6 +293,14 @@ components:
       required:
       - first
       properties:
+        additional:
+          title: Additional
+          maxLength: 255
+          minLength: 1
+          type: string
+          x-ag-ui:
+            id: user_additional
+            name: user_additional
         first:
           example: Winston
           title: First Name
@@ -311,14 +319,6 @@ components:
           x-ag-ui:
             id: user_last_name
             name: user_last_name
-        patronymic:
-          title: Patronymic
-          maxLength: 255
-          minLength: 1
-          type: string
-          x-ag-ui:
-            id: user_patronymic
-            name: user_patronymic
       type: object
     Violation:
       properties:
